<resources>
    <string name="app_name">My Recipe App</string>
    <string name="something_wrong">Oops.. something went wrong</string>
    <string name="image_food">Image Food</string>
    <string name="back_button">Back Button</string>
    <string name="favorite_button">Favorite Button</string>
    <string name="check_icon">Check Icon</string>
    <string name="healthy">Healthy</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="cheap">Cheap</string>
    <string name="dairy_free">Dairy Free</string>
    <string name="gluten_free">Gluten Free</string>

    <string name="title_home">Home</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_setting">Setting</string>

    <string name="pref_key_dark" translatable="false">key_dark_mode</string>
    <string name="pref_dark_follow_system" translatable="false">follow_system</string>
    <string name="dark_mode_auto">Automatic</string>
    <string name="dark_mode_on">Dark Mode</string>
    <string name="dark_mode_off">Light Mode</string>
    <string name="pref_dark_on" translatable="false">on</string>
    <string name="pref_dark_off" translatable="false">off</string>
    <string name="pref_dark_title">Dark mode</string>
    <string name="logo_recipe_ori">Logo Recipe Ori</string>

    <string name="dummy_teks">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sit amet sagittis felis. In tortor lorem, consectetur ac blandit ut, tincidunt ac risus. Aenean lobortis, turpis sed porta porta, ex tortor euismod nunc, vel sagittis sapien diam ut nisi. Donec hendrerit feugiat tempus. Aliquam erat volutpat. Cras rhoncus odio a purus consectetur viverra vitae ut justo. Ut gravida hendrerit turpis sit amet pellentesque. Donec non lectus faucibus, sodales metus et, posuere arcu. Etiam scelerisque tellus vel dolor placerat dictum.</string>
</resources>