<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.dicoding.myrecipeapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_detail_activity"
            app:destination="@+id/detail_activity"
            />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.dicoding.myrecipeapp.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite">
        <action
            android:id="@+id/action_navigation_favorite_to_detail_activity"
            app:destination="@id/detail_activity" />

    </fragment>

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.dicoding.myrecipeapp.ui.setting.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting" />

    <activity
        android:id="@+id/detail_activity"
        android:name="com.dicoding.myrecipeapp.ui.detail.DetailActivity"
        android:label="activity_detail"
        tools:layout="@layout/activity_detail">
        <argument
            android:name="id"
            app:argType="integer" />
    </activity>

</navigation>