<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.detail.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_main_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/view_error"
            layout="@layout/view_error"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ProgressBar
                android:id="@+id/progress_bar_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/tv_detail_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />

            <FrameLayout
                android:id="@+id/frame_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_view"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    app:cardCornerRadius="12dp">

                    <ImageView
                        android:id="@+id/iv_detail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/image_food"
                        android:scaleType="centerCrop"
                        tools:src="@tools:sample/avatars" />

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/fab_back"
                        style="?attr/floatingActionButtonSmallStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/bg_button"
                        android:clickable="true"
                        android:contentDescription="@string/back_button"
                        android:focusable="true"
                        app:elevation="4dp"
                        app:srcCompat="@drawable/ic_back" />

                </com.google.android.material.card.MaterialCardView>

            </FrameLayout>

            <TextView
                android:id="@+id/tv_detail_title"
                style="@style/TextAppearance.MyRecipeApp.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/frame_layout"
                tools:text="Nasi Goreng Plus Dendeng Batokok" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_for_quality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_detail_title">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/container_quality"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/iv_detail_healthy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/check_icon"
                        android:src="@drawable/ic_check"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_detail_healthy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/healthy"
                        android:textColor="@color/blue_900"
                        app:layout_constraintBottom_toBottomOf="@id/iv_detail_healthy"
                        app:layout_constraintStart_toEndOf="@id/iv_detail_healthy"
                        app:layout_constraintTop_toTopOf="@id/iv_detail_healthy" />

                    <ImageView
                        android:id="@+id/iv_detail_vegetarian"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:contentDescription="@string/check_icon"
                        android:src="@drawable/ic_check"
                        app:layout_constraintStart_toStartOf="@id/iv_detail_healthy"
                        app:layout_constraintTop_toBottomOf="@id/iv_detail_healthy" />

                    <TextView
                        android:id="@+id/tv_detail_vegetarian"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/vegetarian"
                        android:textColor="@color/blue_900"
                        app:layout_constraintBottom_toBottomOf="@id/iv_detail_vegetarian"
                        app:layout_constraintStart_toEndOf="@id/iv_detail_vegetarian"
                        app:layout_constraintTop_toTopOf="@id/iv_detail_vegetarian" />

                    <ImageView
                        android:id="@+id/iv_detail_vegan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:contentDescription="@string/check_icon"
                        android:src="@drawable/ic_check"
                        app:layout_constraintBottom_toBottomOf="@id/tv_detail_healthy"
                        app:layout_constraintStart_toEndOf="@+id/tv_detail_healthy"
                        app:layout_constraintTop_toTopOf="@id/tv_detail_healthy" />

                    <TextView
                        android:id="@+id/tv_detail_vegan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/vegan"
                        android:textColor="@color/blue_900"
                        app:layout_constraintBottom_toBottomOf="@id/iv_detail_vegan"
                        app:layout_constraintStart_toEndOf="@id/iv_detail_vegan"
                        app:layout_constraintTop_toTopOf="@id/iv_detail_vegan" />

                    <ImageView
                        android:id="@+id/iv_detail_cheap"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:contentDescription="@string/check_icon"
                        android:src="@drawable/ic_check"
                        app:layout_constraintStart_toStartOf="@id/iv_detail_vegan"
                        app:layout_constraintTop_toBottomOf="@id/iv_detail_vegan" />

                    <TextView
                        android:id="@+id/tv_detail_cheap"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/cheap"
                        android:textColor="@color/blue_900"
                        app:layout_constraintBottom_toBottomOf="@id/iv_detail_cheap"
                        app:layout_constraintStart_toEndOf="@id/iv_detail_cheap"
                        app:layout_constraintTop_toTopOf="@id/iv_detail_cheap" />

                    <ImageView
                        android:id="@+id/iv_detail_dairy_free"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:contentDescription="@string/check_icon"
                        android:src="@drawable/ic_check"
                        app:layout_constraintBottom_toBottomOf="@id/tv_detail_vegan"
                        app:layout_constraintStart_toEndOf="@+id/tv_detail_vegan"
                        app:layout_constraintTop_toTopOf="@id/tv_detail_vegan" />

                    <TextView
                        android:id="@+id/tv_detail_dairy_free"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/dairy_free"
                        android:textColor="@color/blue_900"
                        app:layout_constraintBottom_toBottomOf="@id/iv_detail_dairy_free"
                        app:layout_constraintStart_toEndOf="@id/iv_detail_dairy_free"
                        app:layout_constraintTop_toTopOf="@id/iv_detail_dairy_free" />

                    <ImageView
                        android:id="@+id/iv_detail_gluten_free"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:contentDescription="@string/check_icon"
                        android:src="@drawable/ic_check"
                        app:layout_constraintStart_toStartOf="@id/iv_detail_dairy_free"
                        app:layout_constraintTop_toBottomOf="@id/iv_detail_dairy_free" />

                    <TextView
                        android:id="@+id/tv_detail_gluten_free"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/gluten_free"
                        android:textColor="@color/blue_900"
                        app:layout_constraintBottom_toBottomOf="@id/iv_detail_gluten_free"
                        app:layout_constraintStart_toEndOf="@id/iv_detail_gluten_free"
                        app:layout_constraintTop_toTopOf="@id/iv_detail_gluten_free" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <me.biubiubiu.justifytext.library.JustifyTextView
                android:id="@+id/tv_detail_description"
                style="@style/TextAppearance.MyRecipeApp.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_for_quality"
                tools:text="@string/dummy_teks" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_favorite"
            style="?attr/floatingActionButtonLargeStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_button"
            android:clickable="true"
            android:contentDescription="@string/favorite_button"
            android:focusable="true"
            app:elevation="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_detail"
            app:srcCompat="@drawable/ic_heart_outline" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>